# llm-eval-github

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  project.md  pyproject.toml
.codemeter/: ai_interactions.jsonl  ai_interactions.snapshot.json  ai_summary.json  sessions.jsonl
.cursor/plans/: fde_eval_phased_plan_c7e77ab4.plan.md  implementation_plan.md  implementation_plan1.md  implementation_plan2.md  implementation_plan3.md  model_selection_funnel_127ea293.plan.md
.do/: app.yaml
config/: ground_truth_adjudication_v1.txt  models_catalog.json  models_pricing.json  prompt_classification_v1.txt  recommendations.json
data/corpus/: manifest.json
docs/: README.md  ambiguities-assumptions-and-open-questions.md  application-inputs-and-outputs.md  deployment.md  finetuning-and-scale.md  ground-truth-methodology.md  inference-engine.md  labels-analysis.md  metrics-and-persistence.md  model-selection.md  observability.md  problem-statement.md  submission-format.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  (+1 more)
results/: .gitkeep
src/: config.py
static/: index.html
tests/: conftest.py  test_api.py  test_classifier.py  test_config.py  test_context.py  test_corpus_integration.py  test_corpus_store.py  test_eval_orchestrator.py  test_funnel.py  test_github_client.py  test_ground_truth_outputs.py  test_ground_truth_pipeline.py  test_metrics.py  test_observability.py  test_pipeline_refinements.py  test_rules_engine.py  test_run_single.py  test_runner.py  test_stratified_selection.py
(+1357 files in other folders)
