[project]
name = "llm-eval-github"
version = "0.1.0"
description = "DigitalOcean FDE issue classification eval harness"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "openai>=1.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
fetch-corpus = "ingestion.fetch:main"
build-ground-truth = "ground_truth.pipeline:main"
run-eval = "eval.run:main"
serve = "api.main:run_server"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
